--- a/composer.json
+++ b/composer.json
@@ -7,12 +7,17 @@
     "require": {
         "php": "^8.0.2",
         "guzzlehttp/guzzle": "^7.2",
+        "infyomlabs/laravel-generator": "^5.0",
+        "laravel/dusk": "^7.0",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
+        "laravel-lang/attributes": "^2.0",
+        "laravel-lang/lang": "^11.0",
+        "laravel-lang/publisher": "^14.3",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
@@ -61,5 +66,11 @@
         }
     },
     "minimum-stability": "dev",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "repositories":[
+        {
+            "type":"vcs",
+            "url":"git@github.com:skys215/laravel-generator-with-dusk"
+        }
+    ]
 }
