--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "laravel/dusk": "^7.0",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
-        "laravel/tinker": "^2.7"
+        "laravel/tinker": "^2.7",
+        "skys215/ruanzhu": "^1.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
