--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     },
     "devDependencies": {
         "axios": "^0.27",
+        "bootstrap": "5.2.0",
         "laravel-mix": "^6.0.49",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
-        "resolve-url-loader": "^5.0.0"
+        "resolve-url-loader": "^5.0.0",
+        "sass": "^1.15.2",
+        "sass-loader": "^8.0.0"
     }
 }
