--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,8 @@
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
+        "skys215/laravel-ui-purecss": "^9.0",
+        "skys215/purecss-templates": "^9.0",
         "skys215/ruanzhu": "^1.0"
     },
     "require-dev": {
