--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
         "laravel-mix": "^6.0.49",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
-        "resolve-url-loader": "^5.0.0"
+        "purecss": "^2.1.0",
+        "resolve-url-loader": "^5.0.0",
+        "sass": "^1.15.2",
+        "sass-loader": "^8.0.0"
     }
 }
