--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@popperjs/core": "^2.11.5",
+        "@tabler/core": "^1.0.0-beta11",
         "axios": "^0.27",
+        "bootstrap": "5.2.0",
         "laravel-mix": "^6.0.49",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
-        "resolve-url-loader": "^5.0.0"
+        "resolve-url-loader": "^5.0.0",
+        "sass": "^1.15.2",
+        "sass-loader": "^8.0.0"
     }
 }
