--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,9 @@
     "require": {
         "php": "^8.0.2",
         "guzzlehttp/guzzle": "^7.2",
+        "infyomlabs/adminlte-templates": "^5.0",
         "infyomlabs/laravel-generator": "^5.0",
+        "infyomlabs/laravel-ui-adminlte": "^5.0",
         "laravel/dusk": "^7.0",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
